# labelizer

./: LICENSE  README.md  Readme.md  __init__.py  auxiliary_functions.py  fluorophore.py  measurement_score.py  pyproject.toml  secondary_structure.py  solvent_exposure.py
examples/: run_example.py
examples/1DDB/: .gitignore  1DDB-39_cr.csv  1DDB-39_cs.csv  1DDB-39_se.csv  1DDB-39_ss.csv
labelizer/: config.py  conservation_score.py  cysteine_resemblance.py  fret_score.py  label_lib_functions.py  labeling_parameter.py  labeling_score.py  labelizer.py  methionin_exclusion.py  pdbhelper.py
labelizer/dssp/: NOTE.txt
labelizer/resources/: NOTES.txt
labelizer/resources/fluorophores/: Alexa532.csv  Alexa546.csv  Alexa546.fluo  Alexa555.fluo  Alexa568.fluo  Alexa594.fluo  Alexa647.csv  Alexa647.fluo  Atto488.fluo  Atto532.csv  Atto532.fluo  Atto550.csv  Atto550.fluo  Atto643.csv  (+1 more)
msms/: NOTE.txt
resources/fluorophores/: Alexa488.csv  Alexa488.fluo  Alexa532.fluo  Alexa555.csv  Alexa568.csv  Alexa594.csv  Atto488.csv  Atto643.fluo  Atto647N.csv  Atto647N.fluo  Cy3.csv  Cy3.fluo  Cy3B.fluo  Cy5.csv  Cy5.fluo
resources/probabilities/: C_CR1_Name_P_l_after_s.json  C_CR3_Charge_P_l_after_s.json  C_CS6_Cys_In_Variety_P_l_after_s.json  C_SS6_SS+1_P_l_after_s.json  C_SS7_SS+2_P_l_after_s.json  I_CR4_N_Sidechain_P_l_after_s.json  I_SE9_HSE2_16A_P_l_after_s.json  N_CS2_Score_P_l_after_s.json  N_CS3_Lower_Score_P_l_after_s.json  N_CS4_Upper_Score_P_l_after_s.json  N_SE11_MEAN_SURFACE_DIST_P_l_after_s.json  N_SE2_RSA_Sander_P_l_after_s.json  N_SE3_RSA_Miller_P_l_after_s.json
(+15 files in other folders)
